--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-transformers==4.43.3
-sentencepiece
-torch==2.2.0
+transformers==4.36.2
+sentencepiece==0.1.99
+torch==2.0.1+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
