--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
-streamlit
-transformers==4.36.2
-sentencepiece==0.1.99
+# Core libraries
+streamlit==1.39.0
+transformers==4.44.2
+torch==2.4.0
+sentencepiece==0.2.0
+numpy==1.26.4
+pandas==2.2.3
+
+# Readability and evaluation metrics
+textstat==0.7.4
+nltk==3.9.1
+rouge-score==0.1.2
+sacrebleu==2.4.2
+
+# Optional: fine-tuning support
+datasets==2.21.0
+evaluate==0.4.2
+
+# Utility
+tqdm==4.66.5
+protobuf==5.27.2
+requests==2.32.3
+
+# Deployment/Server support
+gunicorn==23.0.0
