--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-# --- Core ---
+pip==25.2
 streamlit==1.39.0
-protobuf==5.27.2
-altair==5.4.1
-
-# --- Transformers + Model ---
 transformers==4.44.2
-torch==2.4.0
+torch==2.4.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 sentencepiece==0.2.0
-huggingface-hub==0.25.1
-safetensors==0.4.5
-
-# --- Utilities ---
+protobuf==5.27.2
 numpy==1.26.4
 pandas==2.2.3
 requests==2.32.3
